<resources>
    <string name="app_name" translatable="false">PlainApp</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_calls">Calls</string>
    <string name="title_search_chat">Search user</string>
    <string name="log_in">Log in</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="enter_message">Enter message</string>
    <string name="connect_chat">New connection to chat</string>
    <string name="connect">Connect</string>
    <string name="search_chat">Enter user name</string>
    <string name="create">Create</string>
    <string name="empty_chat_name">Chat name is empty, please write correct name</string>
    <string name="sql_constraint_error">Something went wrong, maybe this chat name already exists</string>
    <string name="birthdate_is">Birthdate:</string>
    <string name="created_at">Created at:</string>
    <string name="my_biography">My biography</string>
    <string name="empty_nickname">Empty nickname!</string>
    <string name="write_biography">Write your biography…</string>
    <string name="empty_biography">Biography is empty!</string>
    <string name="empty_phonenumber">Please, enter your phone number</string>
    <string name="accept_call">Accept call</string>
    <string name="reject_call">Reject call</string>
    <string name="call_mic_button">Mic button</string>
    <string name="call_video_button">Video button</string>
    <string name="call_end_button">End call button</string>
    <string name="call_orientation_button">Change orientation device button</string>
    <string name="call_audio_button">Audio button</string>
    <string name="lost_connection">Lost connection server. Trying to reconnect...</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="edit_bio">Edit biography</string>
    <string name="new_user_name">Enter new user name</string>
    <string name="edit_name">Edit user name</string>
    <string name="new_user_nickname">Enter new user nickname</string>
    <string name="user_biography">User biography:</string>
    <string name="add_user">Add user</string>
    <string name="log_out">Log out</string>
</resources>