<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calls.CallActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/callLayout"
        android:visibility="visible">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/remote_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/controls"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_edge"
            android:backgroundTint="@android:color/secondary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/mic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/circle_background"
                android:clickable="true"
                android:contentDescription="@string/call_mic_button"
                android:focusable="true"
                android:padding="12dp"
                app:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_mic_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/video_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/circle_background"
                android:clickable="true"
                android:contentDescription="@string/call_video_button"
                android:focusable="true"
                android:padding="12dp"
                app:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mic_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_videocam_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/end_call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/circle_background"
                android:clickable="true"
                android:contentDescription="@string/call_end_button"
                android:focusable="true"
                android:padding="12dp"
                app:backgroundTint="@android:color/holo_red_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_call_end_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/switch_camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/circle_background"
                android:clickable="true"
                android:contentDescription="@string/call_orientation_button"
                android:focusable="true"
                android:padding="12dp"
                app:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/audio_output_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_cameraswitch_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/audio_output_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/circle_background"
                android:clickable="true"
                android:contentDescription="@string/call_audio_button"
                android:focusable="true"
                android:padding="12dp"
                app:backgroundTint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_speaker_up_24"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/local_view"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_margin="12dp"
            android:layout_above="@+id/controls"
            android:elevation="16dp"
            app:layout_constraintBottom_toTopOf="@+id/controls"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:layout_centerInParent="true"
            android:id="@+id/remote_view_loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@id/remote_view"
            app:layout_constraintEnd_toEndOf="@id/remote_view"
            app:layout_constraintStart_toStartOf="@id/remote_view"
            app:layout_constraintTop_toTopOf="@id/remote_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/responseLayout"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="104dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user_black_24dp"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/chatName"
            android:layout_width="wrap_content"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="9dp"
            android:text="User name"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/acceptButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="68dp"
            android:layout_weight="1.5"
            android:background="@drawable/rounded_edge2"
            android:backgroundTint="?attr/colorPlate"
            android:contentDescription="@string/accept_call"
            android:padding="15dp"
            android:src="@drawable/ic_accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/rejectButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="68dp"
            android:layout_weight="1.5"
            android:background="@drawable/rounded_edge2"
            android:backgroundTint="?attr/colorPlate"
            android:contentDescription="@string/reject_call"
            android:padding="15dp"
            android:src="@drawable/ic_reject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>